# src/main/java/com/smartDine/entity/RequestType.java
@@ -1,0 +1,9 @@
+package com.smartDine.entity;
+
+/**
+ * Enum representing the type of request.
+ */
+public enum RequestType {
+    FRIEND_REQUEST,
+    COMMUNITY_INVITE
+}
